--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -1,11 +1,14 @@
 .linkPage {
-    color: var(--ifm-color-primary);
+    /*color: var(--ifm-color-primary);*/
+    position: relative;
+    color: var(--ifm-navbar-link-color);
     background-color: var(--ifm-background-surface-color);
     padding: 25px;
     margin: 75px;
-    height: 200px;
-    border: solid 2px var(--ifm-background-surface-color);
-    border-radius: 100px;
+    height: 125px;
+    border: solid 3px var(--ifm-background-surface-color);
+    border-radius: 40px;
+    box-shadow: 5px 5px 10px #0008;
     font-size: 1.5rem;
     display: flex;
     justify-content: center;
@@ -14,10 +17,14 @@
 
 .linkPage:hover {
     text-decoration: none;
-    background-color: color-mix(in srgb, #111 10%, var(--ifm-background-surface-color));
+    /*background-color: color-mix(in srgb, #111 10%, var(--ifm-background-surface-color));
     border-color: var(--ifm-color-primary);
     outline: 5px solid;
-    outline-color: color-mix(in srgb, #111 10%, var(--ifm-background-surface-color));
+    outline-color: color-mix(in srgb, #111 10%, var(--ifm-background-surface-color));*/
+    color: var(--ifm-color-primary);
+    border-style: inset;
+    border-color: var(--ifm-color-primary);
+    fill: var(--ifm-color-primary);
 }
 
 .linkHead {
@@ -25,6 +32,11 @@
     width: 100vw;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.imgButton {
+    position: absolute;
+    left: -5px;
 }
 
 @media screen and (max-width: 996px) {
