--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -4,7 +4,7 @@
  */
 
 .heroBanner {
-  padding: 4rem 0;
+  padding-top: 4rem;
   text-align: center;
   position: relative;
   overflow: hidden;
@@ -12,7 +12,7 @@
 
 @media screen and (max-width: 996px) {
   .heroBanner {
-    padding: 2rem;
+    padding-top: 2rem;
   }
 }
 
@@ -24,4 +24,9 @@
 
 .main {
   background-color: color-mix(in srgb, var(--ifm-color-primary) 25%, #000);
+}
+
+.title {
+  background-color: color-mix(in srgb, var(--ifm-color-primary) 25%, #000);
+  color: white;
 }
